--- a/tournament/.project
+++ b/tournament/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>classExercise3</name>
+	<name>tournament</name>
 	<comment></comment>
 	<projects>
 	</projects>
